--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
     "inputmask": "^5.0.3",
+    "jquery": "^3.5.1",
+    "material-design-icons": "^3.0.1",
     "primeflex": "^2.0.0-rc.1",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4",
